--- a/app/views/pages/bye.html.erb
+++ b/app/views/pages/bye.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#bye</h1>
-<p>Find me in app/views/pages/bye.html.erb</p>
+<% if @good %>
+  <h1>Cool, bye!</h1>
+<% else %>
+  <h1>Fine.</h1>
+<% end %>
